 * Use own tokenizer.
 * Add program optimization.
 * Move VM into library.

Now
 * Add support for current state.
 * Fix for better individuals.
 * Set maximum heap size to 196 blocks.
 * Refuse get Object from WeakObject.
 * Set maximum of object to calculate stack in Environment::Eval.
 * Add --enable-static to compile functions statically to avoid stack corruption.

Version 0.0.0.7 2010-12-01
 * Make GP::CheckForParam more strict.
 * Add static check with ERROR in memory and world.
 * Fix IF with ERROR condition.
 * Fix bug with loading functions.
 * Fix bug with loading individual.
 * Change memory in static check from ERROR to NIL to test analize of world.

Version 0.0.0.6 2010-11-10
 * Fix wrong symbols in reduced output object.
 * Support for saving and loading best individual.
 * Add IF and EVAL type checking as FUNC.
 * Add QUOTE? for QUOTE type ckecking.
 * Change probability of any FUNC choosing.
 * Fix error in VM::Environment::Eval with LIST type checking.

Version 0.0.0.5 2010-11-09
 * Fix bugs with choosing best when next can be worst.
 * Support for ios_base::width field for outputting Objects (don't use for store them).
 * Set code for moving into 1 to avoid using world as part of answer.
 * Fix bugs with removing unused functions from program.
 * Add LISP quotation.

Version 0.0.0.4 2010-11-08
 * Move map loader into static member of World.
 * Add moving in world.
 * Add updating world.
 * Add first world.
 * Add evolution.

Version 0.0.0.3 2010-10-16
 * Add map loader.
 * Make EVAL as built-in function.
 * Speed up VM::Environment::Eval
 * Remove circle counter from VM::Environment
 * Use IF and QUOTE as in LISP.

Version 0.0.0.2 2010-09-11
 * Make ruby's conditional support.
 * Implement WeakObject for some speed up.
 * Add MS VC compilation.
 * Add removing unused functions.

Version 0.0.0.1 2010-08-24
 * Fix bugs in allocation.
 * Fix bugs in reading streams into objects.
 * Fix memory leak.
 * Add object's generation and mutation support.